# samulnori

./: .gitignore  app.py  pyproject.toml
conf/: small_gugak_2b.yml  small_musdb_2b.yml  small_musdb_moises_2b.yml
conf/exp/: small_musdb_2b.yml
scripts/: train.py
scripts/setup/: create_gugak_manifests.py
tria/: constants.py
tria/data/: dataset.py
tria/pipelines/tokenizer/: tokenizer.py
