[project]
name = "samulnori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argbind>=0.3.9",
    "descript-audiotools>=0.7.2",
    "gradio>=4.44.1",
    "jupyterlab>=4.5.2",
    "numpy==1.26.4",
    "numba==0.59.1",
    "librosa==0.10.2",
    "primepy>=1.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
]
